--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
 
 go:
-  - 1.8
-  - tip
+  - "1.9"
+  - "1.10"
+  - "1.11"
+  - master
 
 before_install:
   - go get github.com/immortal/logrotate
